# ITCS489-ecommerce

./: .gitignore
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  artisans.py  auctions.py  auth.py  cart.py  orders.py  products.py
backend/app/core/: config.py  constants.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin_action_log.py  auction.py  bid.py  cart.py  order.py  product.py  profile.py
backend/app/schemas/: admin.py  artisan.py  auction.py  auth.py  bid.py  cart.py  order.py  product.py
backend/app/scripts/: seed_demo.py  seed_mass.py
backend/app/services/: auction_service.py  payment_simulator.py  supabase_auth_service.py  ws_manager.py
backend/supabase/migrations/: 001_milestone1_init.sql  002_milestone2_auctions.sql  003_milestone3_admin_layer.sql  004_milestone4_order_tracking.sql
backend/tests/: conftest.py  fakes.py
backend/tests/integration/: test_artisans_api.py  test_auth_role_switch.py
backend/tests/performance/: locustfile.py  test_artisans_endpoint.py
backend/tests/unit/: test_auction_service.py  test_payment_simulator.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: AdminDashboardPage.tsx  App.tsx  BrowseSkeleton.tsx  CartPage.tsx  api.ts  styles.css  types.ts
