[project]
name = "artisan-market-backend"
version = "0.1.0"
description = "Async FastAPI backend for Souq Al Artisan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "locust>=2.31.6",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests for single functions or helpers",
  "integration: tests that exercise API wiring across route/dependency/serialization boundaries",
  "performance: lightweight endpoint timing checks",
]
